fixed horizontal scroll

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -3,9 +3,8 @@
 @import 'footer.css' ;
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla:wght@300;400;500;600;700&display=swap');
 
-*  {
-   border: red 2px soild !important; 
-}
+html {
+   overflow-x: hidden; }
 
 .Container{ 
     display: grid;
@@ -38,12 +37,11 @@
    height: 450px;
    border-radius: 10px;
    border: rgb(202, 201, 201) solid 1px;
-   margin: 10px 15px 20px 15px;
+   margin: 10px 10px 20px 10px;
    text-align: center;
    font-size:20px;
    color: #000000;
-   font-family: 'Piazzolla', serif;
-   
+   font-family: 'Piazzolla', serif; 
 }
 
 .image{
