--- a/styles/post-style.css
+++ b/styles/post-style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Piazzolla:wght@300;400;500;600;700&display=swap');
 @import 'header.css';
 @import 'footer.css' ;
+
+html {
+    overflow-x: hidden; }
+
 .Container{ 
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -71,14 +75,15 @@ hr{
     margin: 10px 15px 5px 15px;
 }
 .social{
-    display: flex;
+    display:flex;
+    flex-wrap: nowrap;
     flex-direction: row;
     justify-content: space-evenly;
     justify-items: center;
     align-content: space-around;
     width: 320px;
     height: 50px;
-    margin: 20px 30px 10px 50px;
+    margin: 20px 30px 10px 0px;
     padding: 10px 10px 0px 10px;
     border: 3px solid #fff;
 }
@@ -126,5 +131,4 @@ font-weight: bold;
 .important-statment {
     font-size: 17px;
     text-decoration: underline;
-
 } 
